# libminecraft-file

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  fmt  ls-files
.github/workflows/: main.yml
cmake/: icu-cpm.cmake  icu.cmake
example/: CMakeLists.txt  main.cpp  zopflimca.cpp
include/: minecraft-file.hpp
include/mcfile/: algorithm.hpp  biome-palette.hpp  block.hpp  cached-chunk-loader.hpp  chunk-section.hpp  chunk.hpp  compression.hpp  coordinate.hpp  data4b3d.hpp  dimension.hpp  encoding.hpp  endianness.hpp  file.hpp  mem.hpp  palette-list.hpp  pos2.hpp  pos3.hpp  region.hpp  scoped-file.hpp  set-block-options.hpp  string.hpp  ticking-block.hpp  tile-tick.hpp  u8stream.hpp  world.hpp  writable-chunk.hpp  xxhash.hpp
include/mcfile/be/: biome-map.hpp  biome-section.hpp  biome.hpp  block.hpp  chunk-section.hpp  chunk.hpp  db-interface.hpp  db-key.hpp  db.hpp  pending-tick.hpp  sub-chunk.hpp  wrap-db.hpp
include/mcfile/biomes/: biome-id.hpp  biome.hpp  from-int.hpp  from-name.hpp  minecraft.hpp  name.hpp
include/mcfile/blocks/: block-data.hpp  block-id.hpp  from-name.hpp  make-block-data.hpp  minecraft.hpp  name.hpp  stairs.hpp
include/mcfile/blocks/data/: ageable.hpp  bisected.hpp  directional.hpp  stairs.hpp
include/mcfile/blocks/data/type/: stairs.hpp
include/mcfile/chunksection/: block-states-parser-113.hpp  block-states-parser-116.hpp  chunk-section-112.hpp  chunk-section-113-base.hpp  chunk-section-113.hpp  chunk-section-116.hpp  chunk-section-generator.hpp
include/mcfile/detail/: byte-stream.hpp  chunk-data-source.hpp  chunk-section-112.hpp  chunk-section-113.hpp  chunk-section-116.hpp  chunk-section-generator.hpp  compression.hpp  endianness.hpp  file-stream.hpp  filesystem.hpp  mca-data-source.hpp  stream-reader.hpp  stream.hpp  string.hpp
include/mcfile/je/: block-palette.hpp  block.hpp  cached-chunk-loader.hpp  chunk-section.hpp  chunk.hpp  flatten.hpp  heightmaps.hpp  mca-builder.hpp  mca-chunk-locator.hpp  mca-data-source.hpp  mca-editor.hpp  region-compression.hpp  region.hpp  set-block-options.hpp  ticking-block.hpp  world.hpp  writable-chunk.hpp
include/mcfile/je/chunksection/: block-states-parser-113.hpp  block-states-parser-116.hpp  chunk-section-112.hpp  chunk-section-113-base.hpp  chunk-section-113.hpp  chunk-section-116.hpp  chunk-section-118.hpp  chunk-section-empty.hpp  chunk-section-generator.hpp
include/mcfile/nbt/: byte-array-tag.hpp  byte-tag.hpp  compound-tag.hpp  double-tag.hpp  end-tag.hpp  float-tag.hpp  int-array-tag.hpp  int-tag.hpp  list-tag.hpp  long-array-tag.hpp  long-tag.hpp  print-as-json.hpp  short-tag.hpp  string-tag.hpp  tag-factory-impl.hpp  tag-factory.hpp  tag.hpp
include/mcfile/nbt/detail/: scalar-tag.hpp  vector-tag.hpp
include/mcfile/stream/: byte-input-stream.hpp  byte-stream.hpp  defer-opening-output-stream.hpp  file-input-stream.hpp  file-output-stream.hpp  gz-file-input-stream.hpp  gz-file-output-stream.hpp  input-stream-reader.hpp  input-stream.hpp  output-stream-writer.hpp  output-stream.hpp
test/: BlockData.hpp  CMakeLists.txt  Path.hpp  Point3D.hpp  biome-section-test.cpp  biome.test.cpp  data4b3d.test.cpp  flatten.test.cpp  heightmap.test.cpp  main.cpp  nbt.test.cpp  snbt.test.cpp  string.test.hpp
test/be/: biome-section.test.cpp  biome.test.cpp  db-key.test.cpp
test/data/: unicode.nbt
test/data/1.12/world-type=debug-mode/region/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
test/data/1.13.2/mitomitoyapparikawaiiyo/region/: r.0.0-c.0.0.csv  r.0.0.csv  r.0.0.mca
test/data/5biomes/: c.-1.-54.nbt
